quick fix for weird wrapping issue on form that appeared at the last second.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -92,7 +92,7 @@
     margin-top: 5px;
     display: grid;
     color: rgba(0, 0, 0, 0.54);
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 30% 70%;
 
     :nth-child(1) {
         grid-column: 1/2;
